Fixed errors when device initializing. Added new configuration to show/hide temperature, humidity, and air quality sensors.

--- a/example.config.json
+++ b/example.config.json
@@ -9,7 +9,10 @@
 	"accessories": [
 		{
 			"accessory": "MiAirPurifier",
-			"name": "Air Purifier"
+			"name": "Air Purifier",
+			"showTemperature": true,
+			"showHumidity": true,
+			"showAirQuality": true
 		}
 	]
 }
